T2: Implemented showing current user location.

--- a/NearbyWiki/Application/Sources/Scenes/HomeScene/Base.lproj/Main.storyboard
+++ b/NearbyWiki/Application/Sources/Scenes/HomeScene/Base.lproj/Main.storyboard
@@ -29,6 +29,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="jEz-r1-xTG" id="xCl-hc-TGQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
